--- a/index.html
+++ b/index.html
@@ -2023,10 +2023,10 @@
                             <div class="scroll-container">
                                 <div class="h-full flex-none">
                                     <div class="w-full pt-st relative h-60 box-content">
-                                        <img alt="top-img" class="w-full overflow-hidden absolute bottom-2 left-0" src="http://bcgameec.cc/bg_m.webp">
+                                        <img alt="top-img" class="w-full overflow-hidden absolute bottom-2 left-0" src="https://raw.githubusercontent.com/DrMachin3/newrussiancopy/refs/heads/main/bg_m.webp">
                                         <div class="w-full z-10 absolute left-0 top-[var(--safe-top)] sm:top-0 p-4">
                                             <div class="flex items-center justify-between">
-                                                <img alt="logo" src="http://bcgameec.cc/logo_festival.webp" class="w-auto h-8">
+                                                <img alt="logo" src="https://raw.githubusercontent.com/DrMachin3/newrussiancopy/refs/heads/main/logo_festival.webp" class="w-auto h-8">
                                                 <button class="button size-8 center bg-white_alpha5 rounded-lg p-0" type="button">
                                                     <div class="icon fill-secondary size-4">
                                                         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
@@ -3012,4 +3012,5 @@
     </div>
 </div>
 <script defer="" src="script.js"></script>
+
 </body></html>
